fix(): fix nowrap

--- a/client/components/PollTable.css
+++ b/client/components/PollTable.css
@@ -27,6 +27,7 @@
 .poll-table td {
   text-align: center;
   padding: 10px;
+  white-space: nowrap;
 }
 
 .poll-table td.winner {
